<resources>
    <string name="app_name">NotesApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_the_title">Please enter the title…</string>
    <string name="please_enter_the_content">Please enter the content…</string>
    <string name="generate">Generate</string>
    <string name="cancel">Cancel</string>
    <string name="r_u_sure_delete">Are you sure to delete this note?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>