<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/please_enter_the_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/r_u_sure_delete"
            app:layout_constraintWidth_percent="0.7" />

        <Button
            android:id="@+id/generate_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:background="@android:color/holo_green_light"
            android:textColor="@color/white"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_btn"
            app:layout_constraintTop_toBottomOf="@+id/title_tv"
            app:layout_constraintWidth_percent="0.35" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:background="@android:color/holo_red_light"
            android:textColor="@color/white"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="@id/generate_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/generate_btn"
            app:layout_constraintTop_toBottomOf="@+id/title_tv"
            app:layout_constraintWidth_percent="0.35" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>