<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/please_enter_the_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:imeOptions="actionNext"
            android:singleLine="true"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/content_et"
            android:layout_width="0dp"
            android:layout_marginTop="15dp"
            android:layout_height="0dp"
            android:gravity="start"
            android:hint="@string/please_enter_the_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:imeOptions="actionDone"
            android:maxLines="4"
            app:layout_constraintTop_toBottomOf="@+id/title_tv"
            app:layout_constraintWidth_percent="0.7" />

        <Button
            android:id="@+id/generate_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:background="@android:color/holo_green_light"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_btn"
            app:layout_constraintTop_toBottomOf="@+id/content_et"
            app:layout_constraintWidth_percent="0.35" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@android:color/holo_red_light"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@id/generate_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/generate_btn"
            app:layout_constraintTop_toBottomOf="@+id/content_et"
            app:layout_constraintWidth_percent="0.35" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>